[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Jeong Ji Won <poiu8944@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sshtunnel = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
